--- a/src/scss/blocks/testing.scss
+++ b/src/scss/blocks/testing.scss
@@ -77,6 +77,7 @@
     &__blue-item {
         background-color: rgba(13, 137, 176, 1);
         flex: 255px;
+        // padding-top: 17.93%;
         aspect-ratio: 16/12.49;
     }
 
